test_c2_11_1_pack_export_3.txt

[1A[2K[WebServer] INFO:     Started server process [47432]
[1A[2K[WebServer] INFO:     Waiting for application startup.

[1A[2K[WebServer] Using data dir: D:\Proyectos_Cursor\CometLocal\data

[1A[2K[WebServer] [job_queue] Cargados 18 jobs desde disco

[1A[2K[WebServer] [job_queue] Worker iniciado

[1A[2K[WebServer] Config paths: org=D:\Proyectos_Cursor\CometLocal\data\refs\org.json people=D:\Proyectos_Cursor\CometLocal\data\refs\people.json platforms=D:\Proyectos_Cursor\CometLocal\data\refs\platforms.json secrets=D:\Proyectos_Cursor\CometLocal\data\refs\secrets.json documents=D:\Proyectos_Cursor\CometLocal\data\refs\documents.json

[1A[2K[WebServer] Using existing LLM config: D:\Proyectos_Cursor\CometLocal\backend\..\data\refs\llm_config.json


[1A[2K[WebServer] INFO:     Application startup complete.
[1A[2K[WebServer] INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)

[1A[2K[WebServer] INFO:     127.0.0.1:52645 - "GET /api/health HTTP/1.1" 200 OK

SyntaxError: D:\Proyectos_Cursor\CometLocal\tests\cae_pack_export_e2e.spec.js: Identifier 'resultDiv' has already been declared. (120:14)

  118 |         // Verificar que el plan tiene doc_ids disponibles
  119 |         // Obtener el plan desde el atributo data-plan-json
> 120 |         const resultDiv = page.locator('[data-testid="cae-plan-result"]');
      |               ^
  121 |         const planJson = await resultDiv.getAttribute('data-plan-json');
  122 |         
  123 |         if (!planJson) {

   at cae_pack_export_e2e.spec.js:120

  118 |         // Verificar que el plan tiene doc_ids disponibles
  119 |         // Obtener el plan desde el atributo data-plan-json
> 120 |         const resultDiv = page.locator('[data-testid="cae-plan-result"]');
      |              ^
  121 |         const planJson = await resultDiv.getAttribute('data-plan-json');
  122 |         
  123 |         if (!planJson) {

Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

[1A[2K
